Fix html and css problems with tota11y

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6149,7 +6149,7 @@ a.label:focus {
 }
 
 .label-warning {
-  background-color: #f0ad4e;
+  background-color: #a06c00;
 }
 
 .label-warning[href]:hover,
