--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <div class="cntPageheader">
     <article class="input-login">
+        <h1></h1>
         <br />
         <h2 class="signup-h2">Login Market IT</h2>
         <br />
@@ -14,14 +15,14 @@
                     <form name="phrase" action="/login" method="POST" id="login_form" class="login-form" onsubmit="return validation()">
 
                         <div class="form-group">
-                            <label for="name" class="clsformLabel">Username:</label>
+                            <label for="logname" class="clsformLabel">Username:</label>
                             <input type="text" class="form-control" id="logname" name="email" placeholder="Username"
                                 required="true">
                             <span id="match"></span>
                         </div>
 
                         <div class="form-group">
-                            <label for="password" class="clsformLabel">Password:</label>
+                            <label for="logpassword" class="clsformLabel">Password:</label>
                             <input type="password" class="form-control" id="logpassword" name="password" placeholder="Password"
                                 required="true" aria-describedby="passwordHelp">
                             <span id="passwordHelp" class="form-text text-muted" style="display: none;">Please enter a
