--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -3,7 +3,8 @@
 <!-- Main container -->
 <div class="page-container">
 
-
+    <h1></h1>
+    <h2></h2>
     <div class="bloc bgc-white l-bloc" id="bloc-4">
         <div class="container bloc-lg">
             <div class="row">
@@ -42,7 +43,7 @@
 
 
     <!-- ScrollToTop Button -->
-    <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+    <a class="bloc-button btn btn-d scrollToTop scroll-top-button" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up scroll-top">TOP</span></a>
     <!-- ScrollToTop Button END-->
 
 
