--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,5 @@
 <div class="cntPageheader">
+  <h1></h1>
       <br/>
       <h2 class="signup-h2">Sign Up For Market IT</h2>
       <br/>
@@ -12,13 +13,13 @@
           <div class="col-lg-8  col-12 jumbotron cntsignupback">
             <form  name ="signup" action="/signup" method="POST" id="signup_form" class="signup-form" >
               <div class="form-group">
-                <label for="firstname" class="clsformLabel">First Name</label>
+                <label for="firstName" class="clsformLabel">First Name</label>
                 <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" aria-describedby="firstHelp" >
                 <span id="firstHelp" class="form-text text-muted" style="display: none;">Please enter a valid first name.</span>
               </div>
                 
               <div class="form-group">
-                <label for="lastname" class="clsformLabel">Last Name:</label>
+                <label for="last " class="clsformLabel">Last Name:</label>
                 <input type="text" class="form-control" id="last " name="last" placeholder="Last Name" aria-describedby="lastHelp">
                 <span id="lastHelp" class="form-text text-muted" style="display: none;">Please enter a valid last name.</span>
               </div>
@@ -30,7 +31,7 @@
               </div>
                 
               <div class="form-group">
-                <label for="telephone" class="clsformLabel">Phone:</label>
+                <label for="phone" class="clsformLabel">Phone:</label>
                 <input type="text" class="form-control" id="phone" name="phone" placeholder="Telephone Number" aria-describedby="phoneHelp" >
                 <span id="phoneHelp" class="form-text text-muted" style="display: none;">Please enter a valid telephone number.</span>
               </div>
@@ -42,13 +43,13 @@
               </div>
                 
               <div class="form-group" >
-                <label for="addressline1" class="clsformLabel">Address Line 1:</label>
+                <label for="address1" class="clsformLabel">Address Line 1:</label>
                 <input type="text" class="form-control" id="address1" name="address1" placeholder="Address Line 1" aria-describedby="addressline1Help" >
                 <span id="addressline1Help" class="form-text text-muted" style="display: none;">Please enter a valid address line.</span>
               </div>
               
               <div class="form-group" >
-                <label for="addressline2" class="clsformLabel">Address Line 2:</label>
+                <label for="address2" class="clsformLabel">Address Line 2:</label>
                 <input type="text" class="form-control" id="address2" name="address2" placeholder="Address Line 2" aria-describedby="addressline2Help">
                 <span id="addressline2Help" class="form-text text-muted" style="display: none;">Please enter a valid address line.</span>
               </div>
@@ -60,7 +61,7 @@
               </div>
                 
               <div class="form-group">
-                <label for="repassword" class="clsformLabel">Repeat Password:</label>
+                <label for="password2" class="clsformLabel">Repeat Password:</label>
                 <input type="password" class="form-control" id="password2" name="password2" placeholder="Repeat Password" aria-describedby="repasswordHelp">
                 <span id="repasswordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
               </div>
