--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,9 +9,10 @@
 					<h1 class="text-center mountain-hero-text animated fadeInUp">
 						Products available according to your need<br>
 					</h1>
+					<h2></h2>
 					<h3 class="text-center mg-lg mountain-hero-text-sub animated fadeInUp animDelay06, .animDelay04-hvr">
 						<br>
-					</h3>}
+					</h3>
 					<div class="text-center">
 						<a href="login" class="btn-wire btn btn-xl animated fadeIn animDelay1">Login<br></a>
 					</div>
@@ -27,7 +28,7 @@
 		<div class="container fill-bloc-bottom-edge">
 			<div class="row">
 				<div class="col-sm-12">
-					<a id="scroll-hero" class="blocs-hero-btn-dwn" href="#"><span class="fa fa-chevron-down"></span></a>
+					<a id="scroll-hero" class="blocs-hero-btn-dwn" href="#" alt="down"><span class="fa fa-chevron-down" alt="down"></span></a>
 				</div>
 			</div>
 		</div>
@@ -35,7 +36,7 @@
 	<!-- bloc-1 END -->
 
 	<!-- ScrollToTop Button -->
-	<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+	<a class="bloc-button btn btn-d scrollToTop scroll-top-button" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up scroll-top">TOP</span></a>
 	<!-- ScrollToTop Button END-->
 </div>
 <!-- Main container END -->
