--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,8 +37,8 @@
                 <div>
                     {{#if user}}
                     <input type="search" placeholder="Enter products..." aria-label="Search" name="search">
-
-                    <button type="submit"></button>
+                    <label for="main-submit"></label>
+                    <button id="main-submit" type="submit"></button>
                     {{/if}}
                 </div>
             </form>
@@ -58,7 +58,7 @@
                     </li>
 
                     <li class="nav-product">
-                        <a href="http://localhost:3000/users/logout" id="pl-undefined" class="nav-home">{{Logout}}</a>
+                        <a href="http://localhost:3000/users/logout" id="pl-undefined" class="nav-home">Sign Out</a>
                     </li>
 
                     {{else}}
