--- a/views/updateproduct.handlebars
+++ b/views/updateproduct.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
   <hr>
-  <h2>Edit Your Product</h2>
+  <h1 class="info-h1">Edit Your Product</h1>
   <hr>
   <div class="container">
     <div class="row justify-content-center">
@@ -11,6 +11,7 @@
             <label for="productname">
               <h2>Product Name:</h2>
             </label>
+            <label for="eproductup-name"></label>
             <input type="text" class="form-control" id="eproductup-name" name="ep_name" placeholder="Name"
               aria-describedby="pnameHelp" value='{{product.p_name}}'>
             <span id="pnameHelp" class="form-text text-muted" style="display: none;">Please enter a valid product name.</span>
@@ -20,6 +21,7 @@
             <label for="Tag">
               <h2>Tag:</h2>
             </label>
+            <label for="eproductup-tag"></label>
             <input type="text" class="form-control" id="eproductup-tag" name="etags" placeholder="Tag" aria-describedby="tagHelp"
               value={{tag}}>
             <span id="tagHelp" class="form-text text-muted" style="display: none;">Please enter a valid tag.</span>
@@ -29,6 +31,7 @@
             <label for="price">
               <h2>Price:</h2>
             </label>
+            <label for="eproductup-price"></label>
             <input type="number" class="form-control" id="eproductup-price" name="eprice" placeholder="Price"
               aria-describedby="priceHelp" value='{{product.price}}'>
             <span id="priceHelp" class="form-text text-muted" style="display: none;">Please enter a valid price.</span>
@@ -38,6 +41,7 @@
             <label for="lastname">
               <h2>Quantity:</h2>
             </label>
+            <label for="eproductup-quantity"></label>
             <input type="number" class="form-control" id="eproductup-quantity" name="equantity" placeholder="Quantity"
               aria-describedby="quantityHelp" value='{{product.quantity}}'>
             <span id="quantityHelp" class="form-text text-muted" style="display: none;">Please enter a valid quantity.</span>
@@ -47,6 +51,7 @@
             <label for="description">
               <h2>Description:</h2>
             </label>
+            <label for="edescription"></label>
             <textarea rows="10" cols="100" class="form-control" id="edescription" name="ep_description" placeholder="Description"
               aria-describedby="descriptionHelp" value='{{product.p_description}}'></textarea>
             <span id="descriptionHelp" class="form-text text-muted" style="display: none;">Please enter a description.</span>
@@ -56,6 +61,7 @@
             <label for="moreinfo">
               <h2>More Information:</h2>
             </label>
+            <label for="emoreinfo"></label>
             <textarea rows="20" cols="100" class="form-control" id="emoreinfo" name="edescription" placeholder="More Information"
               aria-describedby="moreinfoHelp" value='{{product.p_description}}'></textarea>
             <span id="moreinfoHelp" class="form-text text-muted" style="display: none;">Please enter information.</span>
