update product clinet side

--- a/views/updateproduct.handlebars
+++ b/views/updateproduct.handlebars
@@ -71,10 +71,10 @@
               Update </button>
           </div>
         </form>
+        <div class="text-center">
+          <div class="alert alert-danger" id="error" hidden>{{error}}</div>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="error">
-    <div class="error"></div>
   </div>
 </div>
