--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -180,12 +180,13 @@
                 <div class="col-sm-4">
                     <h3 class="mg-md bloc-mob-center-text">
                         AboutUs
-                    </h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
+                    </h3><a href="mailto:hanfanw@gmail.com" class="a-btn a-block bloc-mob-center-text">Contact us</a>
                 </div>
                 <div class="col-sm-4">
                     <h3 class="mg-md bloc-mob-center-text">
                         Follow Us
-                    </h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Twitter</a><a href="index.html"
+                    </h3><a href="https://twitter.com/" target="_blank" class="a-btn a-block bloc-mob-center-text">Twitter</a>
+                    <a href="https://facebook.com/" target="_blank"
                         class="a-btn a-block bloc-mob-center-text">Facebook</a>
                 </div>
                 <div class="col-sm-4">
