--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -6,7 +6,7 @@
                     <div class="breadcrumb_content">
                         <h3>product details</h3>
                         <ul>
-                            <li><a href="products">home</a></li>
+                            <li><a href="/products">home</a></li>
                             <li><i class="fa fa-angle-right"></i></li>
                             <li>product details</li>
                         </ul>
