products img show aligned

--- a/views/postproduct.handlebars
+++ b/views/postproduct.handlebars
@@ -1,31 +1,31 @@
 <div class="container">
 <hr>
-<h2>Post Your Product</h2>
+<h1 class="info-h1">Post Your Product</h1>
 <hr>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-8  col-12 jumbotron">
       <form  name ="productup" action="/products/productup" method="POST" id="productup-form" class="productup-form" enctype="multipart/form-data" onsubmit="return Validation()">
         <div class="form-group" >
-          <label for="productname"><h2>Product Name:</h2></label>
+          <label for="productup-name"><h2>Product Name:</h2></label>
           <input type="text" class="form-control" id="productup-name" name="p_name" placeholder="Name" aria-describedby="pnameHelp" >
           <span id="pnameHelp" class="form-text text-muted" style="display: none;">Please enter a valid product name.</span> 
         </div>
         
         <div class="form-group">
-          <label for="Tag"><h2>Tag:</h2></label>
+          <label for="productup-tag"><h2>Tag:</h2></label>
           <input type="text" class="form-control" id="productup-tag" name="tags" placeholder="Tag" aria-describedby="tagHelp" >
           <span id="tagHelp" class="form-text text-muted" style="display: none;">Please enter a valid tag.</span>
         </div>
 
         <div class="form-group">
-          <label for="price"><h2>Price:</h2></label>
+          <label for="productup-price"><h2>Price:</h2></label>
           <input type="text" class="form-control" id="productup-price" name="price" placeholder="Price" aria-describedby="priceHelp">
           <span id="priceHelp" class="form-text text-muted" style="display: none;">Please enter a valid price.</span>
         </div>
                 
         <div class="form-group">
-          <label for="lastname"><h2>Quantity:</h2></label>
+          <label for="productup-quantity"><h2>Quantity:</h2></label>
           <input type="text" class="form-control" id="productup-quantity" name="quantity" placeholder="Quantity" aria-describedby="quantityHelp">
           <span id="quantityHelp" class="form-text text-muted" style="display: none;">Please enter a valid quantity.</span>
         </div>
