--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,3 +73,12 @@
     font-family: "Domine";
     text-align: center;
 }
+
+.products-div{
+    width: 370px;
+    height: 270px;
+}
+.products-div img{
+    max-width: 100%;
+    max-height: 100%;
+}
