--- a/views/updateproduct.handlebars
+++ b/views/updateproduct.handlebars
@@ -5,8 +5,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8  col-12 jumbotron">
-        {{!-- <form name="eproductup" action="/products/edit/{{product.product_id}}" method="POST" id="eproductup-form"
-          class="eproductup-form" --}} <form name="eproductup" id="eproductup-form" class="eproductup-form" enctype="multipart/form-data">
+         <form name="eproductup" id="eproductup-form" class="eproductup-form" >
           <div class="form-group">
             <label for="productname">
               <h2>Product Name:</h2>
