updated try catch blocks

--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -37,8 +37,7 @@
                 <div class="product_details">
                     <h3>{{product.p_name}}</h3>
                     <div class="product_price">
-                        <span class="current_price">{{product.price}}</span>
-                        <span class="old_price">$368.00</span>
+                        <span class="current_price">${{product.price}}</span>
                     </div>
                     <div class="product_ratting">
                         <a href="#comments">1 Review</a>
