--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -58,7 +58,7 @@
                     </li>
 
                     <li class="nav-product">
-                        <a href="http://localhost:3000/users/logout" id="pl-undefined" class="nav-home">{{Logout}}</a>
+                        <a href="http://localhost:3000/users/logout" id="pl-undefined" class="nav-home">Signout</a>
                     </li>
 
                     {{else}}
