--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1456,7 +1456,7 @@ img {
 .carousel-inner>.item>a>img {
   display: block;
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .img-rounded {
