--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,9 @@
     height: 270px;
 }
 .products-div img{
+
     max-width: 100%;
     max-height: 100%;
+    min-height: 100%;
+    min-width: 100%;
 }
