--- a/views/updateproduct.handlebars
+++ b/views/updateproduct.handlebars
@@ -5,8 +5,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8  col-12 jumbotron">
-         <form name="eproductup"action="/products/edit/{{product.product_id}}" method="POST" id="eproductup-form" class="eproductup-form" >
-         {{!-- <form name="eproductup" id="eproductup-form" class="eproductup-form" > --}}
+         <form name="eproductup"action="/products/edit/{{product.product_id}}" method="POST" id="eproductup-form" class="eproductup-form" onsubmit="return validationForm1(this.value)">
           <div class="form-group">
             <label for="eproductup-name">
               <h2>Product Name:</h2>
@@ -57,7 +56,7 @@
             <span id="descriptionHelp" class="form-text text-muted" style="display: none;">Please enter a description.</span>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-primary" id="eproductup-button" value="{{product.product_id}}" onclick="validationForm1(this.value)">
+            <button type="submit" class="btn btn-primary" id="eproductup-button" value="{{product.product_id}}">
               Update </button>
           </div>
         </form>
@@ -68,3 +67,5 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript" src="../public/js/edit.js"></script>
