--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
     <nav class="navbar">
         <div class="col-sm-3">
             <div class="nav-left">
-                <a href="http://localhost:3000/"><img src="../public/imgs/logo.jpg" alt="MarketIT" id="top-log" class="top-log nav-img" /></a>
+                <a href="http://localhost:3000/"><img src="../../public/imgs/logo.jpg" alt="MarketIT" id="top-log" class="top-log nav-img" /></a>
                 <a href="http://localhost:3000/" class="market-it">Market IT</a>
             </div>
         </div>
