--- a/views/updateproduct.handlebars
+++ b/views/updateproduct.handlebars
@@ -56,7 +56,7 @@
             <span id="descriptionHelp" class="form-text text-muted" style="display: none;">Please enter a description.</span>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-primary" id="eproductup-button" value="{{product.product_id}}">
+            <button type="submit" class="gradient-button gradient-button-1" id="eproductup-button" value="{{product.product_id}}">
               Update </button>
           </div>
         </form>
