--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1434,6 +1434,10 @@ input[type="submit"] {
 .gradient-button-1:hover {
 	background-position: right center;
 }
+
+/* .add-product-btn{
+
+} */
 .clsformLabel{
 	/* color: #226ff4; */
 	font-family: "Arial Black", Gadget, sans-serif;
