--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -111,7 +111,9 @@
                 </div>
                 <div class="tab-pane fade" id="review">
                     {{!-- comment --}}
-                    <div class="header"><h3>Comments</h3></div>
+                    <div class="header">
+                        <h3>Comments</h3>
+                    </div>
                     <div class="table table-hover" id="comment-table">
                         {{!-- <caption>Recent comments</caption> --}}
                         {{!-- <thead>
@@ -121,11 +123,13 @@
                         </thead>
 
                         <tbody>
-                            
+
                         </tbody> --}}
                     </div>
-                    <textarea  id="commentBodyID" rows="3" cols="50" placeholder="your comment..." name="commentBody" ></textarea></br>
-                    <button class="submitButton" id="commentSubmit" value='{{product.product_id}}'>Make Comment</button>
+                    <div class="detail-comment">
+                        <textarea id="commentBodyID" rows="5" cols="80" placeholder="your comment..." name="commentBody"></textarea></br>
+                        <button class="submitButton comment-button" id="commentSubmit" value='{{product.product_id}}'>Make Comment</button>
+                    </div>
                     <div class="error" id="error" hidden></div>
                 </div>
             </div>
