--- a/views/postproduct.handlebars
+++ b/views/postproduct.handlebars
@@ -32,25 +32,18 @@
               
         <div class="form-group">
           <label for="description"><h2>Description:</h2></label>
-          <textarea rows="10" cols="100" class="form-control" id="description" name="p_description" placeholder="Description" aria-describedby="descriptionHelp"></textarea>
+          <textarea rows="10" cols="100" class="form-control postproduct-description" id="description" name="p_description" placeholder="Description" aria-describedby="descriptionHelp"></textarea>
           <span id="descriptionHelp" class="form-text text-muted" style="display: none;">Please enter a description.</span>
         </div>
               
         <div class="form-group">
-          <label for="moreinfo"><h2>More Information:</h2></label>
-          <textarea rows="20" cols="100" class="form-control" id="moreinfo" name="description" placeholder="More Information" aria-describedby="moreinfoHelp"></textarea>
-          <span id="moreinfoHelp" class="form-text text-muted" style="display: none;">Please enter information.</span>
-        </div>
-        
-        <div class="form-group">
           <label for="productimage"><h2>Upload Image for your product:</h2></label> 
           <div></div>
-          <input type="file" id="productimage" name="productimage" accept="image/jpg, image/jpeg">
-          <img src="" id="check">
+          <input type="file" id="productimage" name="productimage" accept="image/jpg, image/jpeg, image/png, image/gif, image/bmp">
         </div>
           
         <div class="text-center">
-          <button type="submit" class="btn btn-primary" id ="productup-button">Post</button>
+          <button type="submit" class="comment-button" id ="productup-button">Post</button>
         </div>
       </form>
       <div class="text-center">
