--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -84,13 +84,13 @@
     {{#each bought_products}}
     <div class="col-sm-3">
       <div class="panel">
-        <div class="panel-body">
-          <button onclick="deleteTab(this)" class='clsDeleteGoal pull-right' value={{this.product_id}}></span></button>
+        <div class="panel-body posted-products">
+          {{!-- <button onclick="deleteTab(this)" class='clsDeleteGoal pull-right' value={{this.product_id}}></span></button> --}}
           <span>
-            <div>{{this.p_name}}</div>
+            <div class="info-pro-name">{{this.p_name}}</div>
           </span>
           <span>
-            <div>${{this.price}}</div>
+            <div class="info-pro-price">${{this.price}}</div>
           </span>
         </div>
       </div>
